--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
   },
   "devDependencies": {
     "typescript": "5.5.4"
+    "devDependencies": {
+  "typescript": "5.5.4",
+  "@types/node": "^20.0.0",
+  "@types/react": "^18.0.0",
+  "@types/react-dom": "^18.0.0"
+}
+
   }
 }
