--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "typescript": "5.5.4"
-  }
+  "typescript": "5.5.4",
+  "@types/node": "^20.11.0",
+  "@types/react": "^18.2.79",
+  "@types/react-dom": "^18.2.25"
+}
 }
